--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<section class="banner">
 			<div class="content-banner">
 				<p>Garden White</p>
-				<h2>Superando Expectativs <br /> Creando Recuerdos Eternos</h2>
+				<h2>Superando Expectativas <br /> Creando Recuerdos Eternos</h2>
 				<a href="#">Solicitar Cita</a>
 			</div>
 		</section>
